--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  database: loan_manager_db
+  username: loan_manager_user
+  password: 'l04n_mgR!'
+  host: loan_manager_database
