FIX container creation for production

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,8 @@ AllCops:
   Exclude:
     # The bundle file is of no concern for linting
     - 'bin/bundle'
+    # The schema file is generated and must not be changed anyways
+    - 'db/schema'
     # Third party libraries do not have to be checked
     - 'node_modules/**/*'
 
